--- a/docker-compose.portainer.yml
+++ b/docker-compose.portainer.yml
@@ -7,6 +7,6 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 80:{{ PORT }}
+      80:{{ PORT }}
     restart: always
     pull_policy: build
