--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "docker:prod": "docker-compose up --build"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
   },
