--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
