--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
       - "80:80"
     restart: always
     pull_policy: build
-    environment:
-      VUE_APP_API_URL: ${VUE_APP_API_URL}
+    env_file:
+      - stack.env
